test/data/resolver/valid/undirected_single_match_reverse.cypher
MATCH (post:Post)-[r:LIKES]-(p:Person) RETURN r
