test/data/resolver/invalid/untyped_edge.cypher
MATCH (p:Person)-[]->(post:Post) RETURN p
